Bug 68089 - can't open .xls file
Summary: can't open .xls file
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.4.6 release
Hardware: Other Windows (All)
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: BSA target:4.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-08-14 02:46 UTC by Mr.Kos
Modified: 2013-09-11 04:42 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
This file could not be opened normally (1.36 MB, application/kset)
2013-08-14 02:46 UTC, Mr.Kos
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mr.Kos 2013-08-14 02:46:47 UTC
Created attachment 84039 [details]
This file could not be opened normally

Problem description: 

Steps to reproduce:
1. CPU up 50%.
2. ....
3. ....

Current behavior:

Expected behavior:

              
Operating System: Windows 8
Version: 4.1.0.4 release
Comment 1 bfoman (inactive) 2013-08-14 18:53:21 UTC
Confirmed with:
Version: 4.2.0.0.alpha0+
Build ID: 087a610fcd5c0c354a9ed6bfccd3451b667d62a3
TinderBox: Win-x86@6-debug, Branch:master, Time: 2013-08-04_21:41:24
Windows 8.1 Enterprise Preview 64 bit

I could open the file after a while, it is in Asian language. Unfortunately xls is unusable as LibreOffice is Not responding every key press, click or mouse move. All good in Excel 2013.
Comment 2 Mr.Kos 2013-08-15 01:12:57 UTC
Which version this problem can be fixed;
All good in Excel 2013.But in LibreOffice is Not responding.
Comment 3 tommy27 2013-08-20 13:27:17 UTC
I can't open file in many LibO releases (tried from 4.1.0 to to 3.4.6)
I can open file with LibO 3.3.3 and 3.3.4
I don't have intermediate versions to test

setting status to NEW, adding regression keyword, changing version to 3.4.6 and adding Kohey Yoshida to CC list.
Comment 4 tommy27 2013-08-20 13:28:03 UTC
just forgot to tell that my testes were performed on Win7 64bit
Comment 5 Commit Notification 2013-09-06 09:19:28 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=871cc47c5ea66d1c2f1cbff5d7564202192ea84c

use a faster standard algorithm to workaround performance problem, fdo#68089



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Markus Mohrhard 2013-09-06 12:32:34 UTC
Please test my fix in a daily build. It helped at lot with my build and made it possible to open the file in a few seconds compared to several minutes before.
Comment 7 retired 2013-09-07 11:25:00 UTC
Takes a few seconds but opens fine on OS X 10.8.4 and latest LO 4.2 master build AND 4.1.1.2. So def WIN only.
Comment 8 tommy27 2013-09-08 09:00:00 UTC
(In reply to comment #7)
> Takes a few seconds but opens fine on OS X 10.8.4 and latest LO 4.2 master
> build AND 4.1.1.2. So def WIN only.

Markus fix is from "2013-09-06". Did you try with a Mac build including that fix or not? I cannot yet test on Windows since the more recent available build is from "2013-09-06"
Comment 9 tommy27 2013-09-08 09:00:59 UTC
(In reply to comment #8)
> ... I cannot yet test on Windows since the more recent available
> build is from "2013-09-06"

typing error. I meant "2013-09-05"
Comment 10 tommy27 2013-09-11 04:42:37 UTC
tested under Win7 64bit

Version: 4.2.0.0.alpha0+
Build ID: 1ea33a8cfc5bc51d0cf83989702b8be82cf52c49
TinderBox: Win-x86@39, Branch:master, Time: 2013-09-10_06:19:34

test file can now be opened unlike previous versions but vertical scrolling is slow with few seconds freezes before seeing updated position. 

anyway since the bug report was about impossibility to load it, I set status to FIXED.