use a faster standard algorithm to workaround performance problem, fdo#68089

We have here an O(n^2) algorithm. At least using std::find_if here
improves the inner loop and fixes the problem with the bug document.

Change-Id: I88dea9434df6c669f4897927a721ad1518d7ca5e